# speech-microservice

./: README.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  tts.py
app/core/: config.py
app/services/: tts_service.py
app/utils/: file_handlers.py  logger.py
